<resources>
    <string name="app_name">Expense Tracker</string>

    <!-- Strings for Action Bar Menu-->
    <string name="action_refresh">Refresh</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_show_budget_list">Show Budget List</string>
    <string name="action_add_budget">Add Budget</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sync_with_server_summary">Automatically synchronize data with
        server when connected to home network.
    </string>
    <string name="pref_sync_with_server_title"> Sync Data</string>
    <string name="pref_user_name_summary">You have not logged in</string>
    <string name="pref_user_name_title">User</string>
    <string name="pref_user_name_default_value"></string>
    <string name="pref_category_data_title">Synchronizing Data</string>

    <!-- Strings for buttons -->
    <string name="login">Login</string>

    <!-- Strings for dialog titles -->
    <string name="login_dialog_title">Login</string>

    <!-- constants names-->
    <string name="PREF_USER">PREF_USER</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_expenses">ActivityExpenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
