<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kapirawan.financial_tracker.activities.ActivityMain">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="100"
        android:title="@string/action_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_expense"
        android:orderInCategory="100"
        android:title="@string/action_add_expense"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_budget_list"
        android:orderInCategory="100"
        android:title="@string/action_show_budget_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_budget"
        android:orderInCategory="100"
        android:title="@string/action_add_budget"
        app:showAsAction="never" />
</menu>